Step 4: Kafka to Spark to Parquet (Windows volume + container)

--- a/producer_test.ipynb
+++ b/producer_test.ipynb
@@ -86,8 +86,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "dc150fd5-6e62-484e-be56-234c8ed25df9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 messages sent\n"
+     ]
+    }
+   ],
+   "source": [
+    "from kafka import KafkaProducer\n",
+    "producer = KafkaProducer(bootstrap_servers=\"localhost:9092\")\n",
+    "\n",
+    "for i in range(3):\n",
+    "    producer.send(\"test_topic\", f\"parquet test message {i}\".encode(\"utf-8\"))\n",
+    "producer.flush()\n",
+    "\n",
+    "print(\"3 messages sent\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2fef7dc0-a49e-4a3e-acb9-ae232e981e89",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pyarrow in c:\\users\\youssouf djire\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (21.0.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.0 -> 25.3\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(['data/parquet_windows\\\\part-00000-0ea75ecd-9e07-4231-833f-a71fefa749e1-c000.snappy.parquet',\n",
+       "  'data/parquet_windows\\\\part-00000-9898e32a-4698-4694-b800-8e46dd617204-c000.snappy.parquet'],\n",
+       " 2)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pip install pyarrow\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "bc3c208c-8a6a-48aa-97aa-2960bed1dc2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['data/parquet_windows\\\\part-00000-0ea75ecd-9e07-4231-833f-a71fefa749e1-c000.snappy.parquet',\n",
+       "  'data/parquet_windows\\\\part-00000-9898e32a-4698-4694-b800-8e46dd617204-c000.snappy.parquet'],\n",
+       " 2)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import glob\n",
+    "\n",
+    "files = glob.glob(\"data/parquet_windows/*.parquet\")\n",
+    "files[:3], len(files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "13891659-4e3a-4138-bb25-11c8f96226d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>message</th>\n",
+       "      <th>event_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>parquet test message 0</td>\n",
+       "      <td>2026-01-19 00:18:48.425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>parquet test message 1</td>\n",
+       "      <td>2026-01-19 00:18:48.425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>parquet test message 2</td>\n",
+       "      <td>2026-01-19 00:18:48.425</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  message              event_time\n",
+       "0  parquet test message 0 2026-01-19 00:18:48.425\n",
+       "1  parquet test message 1 2026-01-19 00:18:48.425\n",
+       "2  parquet test message 2 2026-01-19 00:18:48.425"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_parquet(\"data/parquet_windows\")\n",
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f06e6c1-7ed7-4c49-a597-9cf739428722",
    "metadata": {},
    "outputs": [],
    "source": []
